# sfc-gui

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: build.yml
tabs/: infotab.cpp  infotab.h  packtab.cpp  packtab.h  repairtab.cpp  repairtab.h  unpacktab.cpp  unpacktab.h  verifytab.cpp  verifytab.h
tests/: test_gui.cpp
widgets/: chunkgridwidget.cpp  chunkgridwidget.h  dropzone.cpp  dropzone.h  metadataeditor.cpp  metadataeditor.h
worker/: sfcworker.cpp  sfcworker.h
